helmcharts/system-charts/kyverno-policies/require-resource-requests-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-requests-limits
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-requests-limits
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - prod
                - dev
      validate:
        message: "All containers must have resources.requests and resources.limits (memory and cpu)."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
                    cpu: "?*"
